--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_sloplo_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Sloplo"
+        android:theme="@style/SplashTheme"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
