--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ coreI18n = "1.0.0"
 uiTextAndroid = "1.8.0"
 desguaring = "2.1.2"
 navigationFragmentKtx = "2.8.9"
+circleIndicator = "2.1.6"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -40,6 +41,7 @@ androidx-ui-text-android = { group = "androidx.compose.ui", name = "ui-text-andr
 core-desugaring = {group = "com.android.tools", name="desugar_jdk_libs", version.ref="desguaring"}
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version = "2.1.0" }
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
+relex-circleindicator = { group = "me.relex", name = "circleindicator", version.ref = "circleIndicator" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
